--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-better-bem",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "React component for easy BEM classname handling",
-  "main": "index.js",
+  "main": "./lib/Bem.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
