--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"lol 🤣\" && exit 1",
     "build": "webpack",
-    "prepare": "webpack"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,10 @@
   },
   "keywords": [
     "react",
+    "component",
+    "hoc",
     "bem",
+    "classname",
     "classnames",
     "css",
     "modules",
