updated peer deps + vbump

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-better-bem",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "React component for easy BEM classname handling",
   "main": "dist/Bem.js",
   "module": "src/Bem.js",
@@ -49,8 +49,8 @@
     "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": ">=15",
+    "react-dom": ">=15"
   },
   "babel": {
     "presets": [
